# pypacks

./: CHANGELOG.md  README.md  pack.mcmeta  pad.txt  pyproject.toml  todo.txt
data/c/function/: load.mcfunction
data/minecraft/tags/function/: load.json
examples/block_variants/: INFO.md  block_variants.py
examples/custom_book/: custom_book.py  main.py
examples/custom_book/datapack/: pack.mcmeta
examples/custom_book/datapack/data/written_books/function/: create_wall.mcfunction  give_all.mcfunction  give_reference_book.mcfunction  load.mcfunction
examples/custom_book/resource_pack/: pack.mcmeta
examples/custom_book/resource_pack/assets/written_books/font/: all_fonts.json
examples/development/: INFO.md  bee_explosion_structure.nbt  main.py
examples/development/structures/: iron_block_crafting_recipe.nbt  my_little_house.nbt
examples/empty/: INFO.md  empty.py
examples/empty/datapack/: pack.mcmeta
examples/empty/datapack/data/pypacks_empty/function/: load.mcfunction
examples/empty/resource_pack/: pack.mcmeta
examples/from_existing_pack/: INFO.md  from_pack.py  generated_pack.py
examples/item_components/: INFO.md  item_components.py  main.py
examples/raycasting/: INFO.md  main.py  raycasting.py
examples/tests/: INFO.md  test_suite.py  tests.py
examples/tests/structures/: custom_item_shaped.nbt
pypacks/: __init__.py  book_generator.py  create_wall.py  datapack.py  generate.py  image_generation.py  pack.py  raycasting.py  reference_book_config.py  reference_book_generator.py  test.py  utils.py  written_book_framework.py
pypacks/additions/: __init__.py  config.py  constants.py  create_wall.py  custom_block.py  custom_chunk_scanner.py  custom_crafter.py  custom_loop.py  custom_ore_generation.py  font_tester.py  item_components.py  nbt_parser.py  raycasting.py  reference_book_config.py  reference_book_generator.py  text.py  written_book_framework.py
pypacks/assets/: recipe_image_data.py
pypacks/assets/images/: icons.txt
pypacks/automatic_testing/: prefabs.py  test_datapack.py  testing_blocks.py  testing_framework.py
pypacks/image_generation/: recipe_image_data.py  ref_book_icon_gen.py
pypacks/image_manipulation/: border_generation.py  built_in_resolving.py  font_manager.py  png_utils.py  recipe_image_data.py  ref_book_icon_gen.py
pypacks/minecraft/: advancements.py  damage_types.py  dimension_types.py  enchantments.py  items.py  jukebox_songs.py  loot_tables.py  paintings.py  recipes.py
pypacks/providers/: __init__.py  enchantment_level_based_provider.py  enchantment_provider.py  float_provider.py  height_provider.py  int_provider.py  number_provider.py
pypacks/resources/: __init__.py  base_resource.py  constants.py  custom_advancement.py  custom_block.py  custom_block_models.py  custom_damage_type.py  custom_dimension.py  custom_enchantment.py  custom_font.py  custom_game_test.py  custom_item.py  custom_jukebox_song.py  custom_language.py  custom_loot_table.py  custom_mcfunction.py  custom_model.py  custom_painting.py  custom_predicate.py  custom_recipe.py  custom_sound.py  custom_tag.py  item_components.py  item_model_definition.py  mcfunction.py  recipe.py  tints.py
pypacks/resources/custom_loot_tables/: __init__.py  custom_loot_table.py  functions.py  number_provider.py
pypacks/resources/entities/: __init__.py  cat_variant.py  chicken_variant.py  cow_variant.py  entity_variant.py  frog_variant.py  pig_variant.py  spawn_conditions.py  wolf_variant.py
pypacks/resources/predicate/: data_component_predicate.py  predicate_conditions.py  predicates.py
pypacks/resources/world_gen/: __init__.py  biome.py  entity_spawner.py  feature.py  noise.py  noise_settings.py  structure.py  structure_set.py  world_gen_objects.py
pypacks/scripts/: advancements.py  all_items.py  damage_tags.py  default_dictionary.py  default_reducer.py  loot_tables.py  setup_testing.mcfunction  test.py  texture_mapping.py
pypacks/scripts/instance_creators/: advancement.py  damage_type.py  dimension.py  dimension_type.py  enchantment.py  item.py  jukebox_song.py  loot_table.py  painting_variant.py  recipe.py
pypacks/scripts/repos/: advancements.py  all_entity_names.py  all_item_instances.py  all_items.py  damage_tags.py  damage_types.py  loot_tables.py  mcfunction_header_patterns.py  models.py  particles.py  sounds.py
pypacks/scripts/scrapers/: advancement_scraper.py  all_items_scraper.py  all_models_scraper.py  damage_tag_scraper.py  damage_type_scraper.py  default_reducer.py  dimension_instance_creator.py  enchantment_instance_creator.py  entity_name_scraper.py  item_instance_creator.py  loot_table_instance_creator.py  loot_table_scraper.py  minecraft_font_scraper.py  scrape_all_entity_names.py  searcher.py  sound_scraper.py  test.py
pypacks/templates/: recipe_templates.py
(+3 files in other folders)
